semver in iot-consumer-pipeline, some naming refactoring

--- a/tekton/kustomization.yaml
+++ b/tekton/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
-- manuela-ci-namespace.yaml
-- pipeline-sa.yaml
+- manuela-ci.yaml
+- pipeline.yaml
 bases:
 - pipeline-resources
 - pipelines
