--- a/tekton/secrets/kustomization.yaml
+++ b/tekton/secrets/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
-- github-secret.yaml
-- quay-secret.yaml
-- argocd-secret.yaml
+- github.yaml
+- quay-build-secret.yaml
+- argocd-env-secret.yaml
 
 
