--- a/tekton/tasks/gitops-imagetag.yaml
+++ b/tekton/tasks/gitops-imagetag.yaml
@@ -24,14 +24,17 @@ spec:
     - name: RESOURCE_PATH
       description: The path of the resource to be patched.
       type: string
-      default: "config/templates/manuela-dev/messaging/messaging-is.yaml"
+      default: "config/instances/manuela-tst/kustomization.yaml"
     - name: PATCH_COMMAND
       description: The patch command to apply to the resource.
       type: string
-      default: '{"spec":{"tags":[{"name":"latest","from":{"name":"iot-consumer:latest"}}]}}'
+      default: '{"images":[{"name":"image-registry.openshift-image-registry.svc:5000/manuela-tst-all/messaging","newTag":"1.1.1"}]}'
+      #default: '{"spec":{"tags":[{"name":"latest","from":{"name":"iot-consumer:latest"}}]}}'
     resources:
     - name: source
       type: git
+    - name: source-semver
+      type: git  
   steps:
   - name: patch-imagetag
     image: quay.io/openshift/origin-cli:4.3.0
@@ -39,12 +42,16 @@ spec:
         #!/usr/bin/env bash
         oc version
         echo ''
+        semver=$(cat /workspace/source-semver/components/iot-consumer/VERSION)
+        echo $semver
+        patch='{"images":[{"name":"image-registry.openshift-image-registry.svc:5000/manuela-tst-all/messaging","newTag":"'"${semver}"'"}]}'
+        echo $patch
         echo 'Patching $(inputs.params.RESOURCE_PATH)'
         echo ''
         cat $(inputs.params.RESOURCE_PATH)
         echo ''
-        echo 'Patch command is $(inputs.params.PATCH_COMMAND)'
-        oc patch --local=true --output='yaml' --patch='$(inputs.params.PATCH_COMMAND)' --filename=$(inputs.params.RESOURCE_PATH) > $(inputs.params.TMP_PATCHED_FILE)
+        echo 'Patch command is "'$patch'" '
+        oc patch --type merge --local=true --output='yaml' --patch=$patch --filename=$(inputs.params.RESOURCE_PATH) > $(inputs.params.TMP_PATCHED_FILE)
         echo ''
         echo 'Output written to $(inputs.params.TMP_PATCHED_FILE)'
         echo ''
