--- a/infrastructure/crw/kustomization.yaml
+++ b/infrastructure/crw/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+bases:
+- github.com/sa-mw-dach/manuela-gitops/config/templates/manuela-team-rolebindings
+
 resources:
 - crw-namespace.yaml
 - crw-operator-group.yaml
