--- a/tekton/pipelines/kustomization.yaml
+++ b/tekton/pipelines/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
 - iot-consumer-pipeline.yaml
 - iot-frontend-pipeline.yaml
-- iot-sensor-pipeline.yaml
+- iot-software-sensor-pipeline.yaml
 
 
