--- a/tekton/tasks/skopeo-tag-image.yaml
+++ b/tekton/tasks/skopeo-tag-image.yaml
@@ -20,4 +20,5 @@ spec:
       #!/usr/bin/env bash
       cd git-repo/$(inputs.params.PATH_CONTEXT)/
       export SEMVER=$(cat VERSION)
+      echo skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(inputs.resources.image.url) docker://$(inputs.resources.image.url):$SEMVER
       skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(inputs.resources.image.url) docker://$(inputs.resources.image.url):$SEMVER
