--- a/tekton/pipelines/iot-software-sensor-pipeline.yaml
+++ b/tekton/pipelines/iot-software-sensor-pipeline.yaml
@@ -70,7 +70,7 @@ spec:
     params:
     - name: GIT_BRANCH
       value: master
-    - name: RESOURCE_PATH
+    - name: KUSTOMIZATION_YAML_PATH
       value: config/instances/manuela-tst/kustomization.yaml
     - name: YAML_PATH
       value: images.(name==machine-sensor).newTag  
@@ -156,7 +156,7 @@ spec:
         - name: source-gitops
           resource: gitops-repo
     params:
-    - name: RESOURCE_PATH
+    - name: KUSTOMIZATION_YAML_PATH
       value: config/templates/manuela-openshift-prod/machine-sensor/kustomization.yaml
     - name: YAML_PATH
       value: images.(name==machine-sensor).newTag  
@@ -164,6 +164,10 @@ spec:
       value: staging-approval
     - name: VERSION_PATH
       value: components/iot-software-sensor/VERSION
+    - name: IMAGESTREAM_PATH
+      value: config/templates/manuela-openshift-prod/machine-sensor/machine-sensor-is.yaml 
+    - name: REMOTE_IMAGE
+      value: quay.io/manuela/iot-software-sensor
   - name: create-pull-request
     taskRef:
       name: github-add-pull-request 
