Create a bit more realistic simulation data #221

--- a/components/iot-software-sensor/src/main/resources/application.properties
+++ b/components/iot-software-sensor/src/main/resources/application.properties
@@ -6,6 +6,7 @@ machine.id=${MACHINE_ID:pump-1}
 device.id=${DEVICE_ID:sensor-tv}
 device.metrics=${DEVICE_METRICS:temperature,vibration,gps,light}
 
+
 # MQTT
 mqtt.username=${MQTT_USER:iotuser}
 mqtt.password=${MQTT_PASSWORD:iotuser}
@@ -26,18 +27,19 @@ sensor.gps.finalLongitude=${SENSOR_GPS_FINAL_LONGITUDE:-73.992895}
 # Vibration
 sensor.vibration.enabled=${SENSOR_VIBRATION_ENABLED:true}
 sensor.vibration.frequency=${SENSOR_VIBRATION_FREQUENCY:5}
-sensor.vibration.start=${SENSOR_VIBRATION_START:0}
-sensor.vibration.minRange=${SENSOR_VIBRATION_MINRANGE:0}
-sensor.vibration.maxRange=${SENSOR_VIBRATION_MAXRANGE:18}
+sensor.vibration.start=${SENSOR_VIBRATION_START:15}
+sensor.vibration.minRange=${SENSOR_VIBRATION_MINRANGE:14}
+sensor.vibration.maxRange=${SENSOR_VIBRATION_MAXRANGE:16}
 sensor.vibration.minIteration=${SENSOR_VIBRATION_MINITERATION:0}
 sensor.vibration.maxIteration=${SENSOR_VIBRATION_MAXITERATION:1}
+sensor.vibration.peakInterval=${SENSOR_VIBRATION_PEAKINTETVAL:20}
 
 # Temperature
 sensor.temperature.enabled=${SENSOR_TEMPERATURE_ENABLED:true}
 sensor.temperature.frequency=${SENSOR_TEMPERATURE_FREQUENCY:5}
-sensor.temperature.startMin=${SENSOR_TEMPERATURE_STARTMIN:50}
-sensor.temperature.startMax=${SENSOR_TEMPERATURE_STARTMAX:50}
-sensor.temperature.minRange=${SENSOR_TEMPERATURE_MINRANGE:40}
+sensor.temperature.startMin=${SENSOR_TEMPERATURE_STARTMIN:65}
+sensor.temperature.startMax=${SENSOR_TEMPERATURE_STARTMAX:65}
+sensor.temperature.minRange=${SENSOR_TEMPERATURE_MINRANGE:65}
 sensor.temperature.maxRange=${SENSOR_TEMPERATURE_MAXRANGE:75}
 sensor.temperature.minIteration=${SENSOR_TEMPERATURE_MINITERATION:0}
 sensor.temperature.maxIteration=${SENSOR_TEMPERATURE_MAXITERATION:1}
