--- a/components/iot-consumer/manifests/iot-consumer-configmap.yaml
+++ b/components/iot-consumer/manifests/iot-consumer-configmap.yaml
@@ -10,6 +10,8 @@ data:
   TOPIC_TEMPERATURE: iot-sensor/sw/temperature
   TOPIC_VIBRATION: iot-sensor/sw/vibration
   TOPIC_LIGHT: iot-sensor/sw/light
+  TEMPERATURE_ALERT_ENABLED: 'true'
+  VIBRATION_ALERT_ENABLED: 'false'
 kind: ConfigMap
 metadata:
   name: iot-consumer-cfg
