--- a/components/kustomization.yaml
+++ b/components/kustomization.yaml
@@ -2,12 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- iotdemo-namespace.yaml
 - iotdemo-rolebinding.yaml
-- iotdemo-operatorgroup.yaml
-#- iotdemo-secrets.yaml
+
 bases:
 - iot-consumer/manifests
 - iot-frontend/manifests
 - iot-software-sensor/manifests
+- ../namespaces_and_operator_subscriptions/iotdemo
+
 namespace: iotdemo
