--- a/namespaces_and_operator_subscriptions/kustomization.yaml
+++ b/namespaces_and_operator_subscriptions/kustomization.yaml
@@ -2,5 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 bases:
-- crw
 - argocd
+- iotdemo
+- manuela-crw
+- openshift-pipelines
+- manuela-ci
