--- a/namespaces_and_operator_subscriptions/openshift-pipelines/kustomization.yaml
+++ b/namespaces_and_operator_subscriptions/openshift-pipelines/kustomization.yaml
@@ -2,7 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- argocd.yaml
-
-bases: 
-- ../../namespaces_and_operator_subscriptions/argocd
+- openshift-pipelines-operator-subscription.yaml
