set default argocd policy to admin for all users

--- a/infrastructure/argocd/argocd.yaml
+++ b/infrastructure/argocd/argocd.yaml
@@ -10,5 +10,6 @@ spec:
     version: openshift-connector
   helpChatURL: https://chat.google.com/room/AAAAonnPp64
   helpChatText: "MANUela Chat"
-
+  rbac:
+    defaultPolicy: role:admin
 #see: https://argocd-operator.readthedocs.io/en/latest/reference/argocd/
