--- a/tekton/tasks/argocd-task-sync-and-wait.yaml
+++ b/tekton/tasks/argocd-task-sync-and-wait.yaml
@@ -6,13 +6,17 @@ spec:
   inputs:
     params:
       - name: application-name
+        type: string
         description: name of the application to sync
       - name: revision
+        type: string
         description: the revision to sync to
         default: HEAD
       - name: flags
+        type: string
         default: --
       - name: argocd-version
+        type: string
         default: v1.0.2
   stepTemplate:
     envFrom:
