--- a/tekton/secrets/kustomization.yaml
+++ b/tekton/secrets/kustomization.yaml
@@ -1,3 +1,8 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+namespace: manuela-ci
+
 resources:
 - github.yaml
 - quay-build-secret.yaml
